# pico-rmii-ethernet

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/httpd/: CMakeLists.txt  main.c
src/: rmii_ethernet.c  rmii_ethernet_phy_rx.pio  rmii_ethernet_phy_tx.pio
src/include/rmii_ethernet/: netif.h
src/lwip/: arch.c  lwipopts.h
